Validate the pulse email content.